--- a/ESTILO.css
+++ b/ESTILO.css
@@ -250,6 +250,15 @@
   p, ul {
     font-size: 0.95rem;
   }
+  .indicacion{
+  max-width: 100%;
+  display: block;
+  margin: 0.5rem auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  height: fit-content;
+}
 }
 
 @media (max-width: 530px) {
@@ -277,4 +286,13 @@
   table th, table td {
     font-size: 0.85rem;
   }
+  .indicacion{
+  max-width: 100%;
+  display: block;
+  margin: 0.5rem auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  height: fit-content;
+}
 }
