--- a/ESTILO.css
+++ b/ESTILO.css
@@ -287,12 +287,6 @@
     font-size: 0.85rem;
   }
   .indicacion{
-  max-width: 100%;
-  display: block;
-  margin: 0.5rem auto;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  height: fit-content;
+height: 60%;
 }
 }
