--- a/Integracion.css
+++ b/Integracion.css
@@ -28,10 +28,14 @@ body {
 }
 
 .textos{
-  margin-left: 26%;
+  margin-left: 30%;
   border: 2px #1b263b solid;
   align-self: center;
 
+}
+
+.coso p{
+  margin-left: 10px;
 }
 
 .coso{
