--- a/Integracion.css
+++ b/Integracion.css
@@ -237,10 +237,10 @@ a {
     display: block;
     margin: 0;
     width: 100%;
-    height: 600px;
+    height: 40em;
   }
   .imagen3{
-    width: 110px;
+    width: 100px;
     margin-top: 15em;
     margin-left: 10px;
   }
