--- a/Integracion.css
+++ b/Integracion.css
@@ -21,17 +21,24 @@ body {
 }
 
 .imagen3{
-  margin-left: 10px;
+  margin-left: 0;
+  margin-right: 4em;
   max-width: 240px;
   float: left;
-  position: absolute;
+  position: block;
+}
+
+.imagen4{
+  margin-left: 0.1em;
+  max-width: 240px;
+  float: left;
+  position: block;
 }
 
 .textos{
-  margin-left: 30%;
+  margin: 2em 4em 0 0;
   border: 2px #1b263b solid;
-  align-self: center;
-
+  align-self: flex-start;
 }
 
 .coso p{
@@ -237,7 +244,7 @@ a {
     display: block;
     margin: 0;
     width: 100%;
-    height: 50em;
+    height: 30em;
   }
   .imagen3{
     width: 100px;
